Add Action Method - Get region by id and all

--- a/Build ASP.NET Core Web API - Scratch To Finish/Build ASP.NET Core Web API - Scratch To Finish.csproj
+++ b/Build ASP.NET Core Web API - Scratch To Finish/Build ASP.NET Core Web API - Scratch To Finish.csproj
@@ -8,6 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Command_EF.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Command_EF.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
