--- a/Build ASP.NET Core Web API - Scratch To Finish/appsettings.json
+++ b/Build ASP.NET Core Web API - Scratch To Finish/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WalkConnectionStrings": "Server=(LocalDB)\\MSSQLLocalDB;Database=WalkDb;Trusted_Connection=True;TrustServerCertificate=true;"
+  }
 }
